--- a/s/sf/sfw/sfweekly.com.html
+++ b/s/sf/sfw/sfweekly.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the sfweekly.com privacy policy that was archived on 2009-06-19.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090619200816id_/http%3A//www.sfweekly.com/about/privacyPolicy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the sfweekly.com privacy policy that was archived on 2009-10-20.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20091020123836id_/http%3A//www.sfweekly.com/about/privacyPolicy) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//w3c//dtd html 4.01 transitional//en" "http://www.w3.org/tr/html4/loose.dtd"><html><head>
     <meta name="verify-v1" content="Y1fIJFbwjG2mNeO+5BL1RebK82jDR7S61wFou9BZLEg=">
@@ -18,9 +18,9 @@
         //-->
     </script>
 
-    <link rel="stylesheet" href="http://assets.sfweekly.com/load/css/style-11576.css">
+    <link rel="stylesheet" href="http://assets.sfweekly.com/load/css/style-12687.css">
     <!-- p/af/v/e/LoadJS -->
-<script language="javascript" src="http://assets.sfweekly.com/load/js/script-11576.js" type="text/javascript"></script>
+<script language="javascript" src="http://assets.sfweekly.com/load/js/script-12687.js" type="text/javascript"></script>
 <!-- End p/af/v/e/LoadJS -->
 	<link rel="alternate" type="application/rss+xml" title="Complete Issue" href="/syndication/issue">
   </head>
@@ -34,34 +34,34 @@
 
    <!--googleoff: all-->
 
-	<!-- Using CSS to drive login bar hover for now. -->
-<div style="position:absolute;z-index:2147483647;width:100%;text-align:center;top:0px;left:0px;">
-<div class="rmtoolbar" id="rmtoolbar">
- <div class="rmtoolbar2">
-  <div class="rmtoolbar3" id="ReaderManagementLoginBarContainer">
-<div class="rmRec wunder"><img class="rmLogo" src="/img/rmlogo.jpg" alt="SF Weekly">
-<span id="wunderWrapper" style="display: none;"><a id="wunderLink" target="_blank" href="http://www.wunderground.com/auto/sfweekly/CA/San_Francisco.html"></a></span>
-<script type="text/javascript">
-
-var wunderUrl = 'http://banners.wunderground.com/banner/ban/wxBanner?bannertype=villagevoice_cond&zip=94107';
-
-</script>
-<strong><a href="/readers/register">Receive Weekly Email and Text Message Updates: </a></strong><br>
-<span class="rmSignup"><a href="/readers/register">Sign up for latest info on concerts, dining, promotions and more!</a></span></div><a href="/readers/register"><img class="rmArrow" src="/img/rmtoolbar_go.png" alt="Go!"></a>
-
-<div class="rmtoolbar5" id="rmtoolbar5">
-
+	<!-- js: p/af/wr/js/reader_loginbar.js -->
+<!-- Using CSS to drive login bar hover for now. -->
+<div style="position:absolute;z-index:2147483646;width:100%;text-align:center;top:0px;left:0px;">
+    <div class="rmtoolbar" id="rmtoolbar">
+        <div class="rmtoolbar2">
+            <div class="rmtoolbar3" id="ReaderManagementLoginBarContainer">
+                            <div class="rmRec wunder"><img class="rmLogo" src="/img/rmlogo.jpg" alt="SF Weekly">
+                    <span id="wunderWrapper" style="display: none;"><a id="wunderLink" target="_blank" href="http://www.wunderground.com/auto/sfweekly/CA/San_Francisco.html"></a></span>
+                    <script type="text/javascript">
+                        var wunderUrl = 'http://banners.wunderground.com/banner/ban/wxBanner?bannertype=villagevoice_cond&zip=94107';
+                    </script>
+                    <strong><a href="/readers/register">Receive Weekly Email and Text Message Updates: </a></strong><br>
+                    <span class="rmSignup"><a href="/readers/register">Sign up for latest info on concerts, dining, promotions and more!</a></span>
+                </div>
+                <a href="/readers/register"><img class="rmArrow" src="/img/rmtoolbar_go.png" alt="Go!"></a>
+                
+                <div class="rmtoolbar5" id="rmtoolbar5">
+                    
 <form action="" method="post" name="rmlogin" id="rmlogin" onsubmit="return false;">
 <div class="loginInputs">email: <input type="text" name="u" id="u"><br>pass: <input type="password" name="p" id="p"></div>
 <div class="loginSubmit"><input type="submit" name="submit" value="Login" onclick="RMRequest('login', '')"></div>
 <div class="rmRegLinks"><span><a href="/readers/register">Register</a></span><a href="/readers/login?forgotpass=1">Forgot Password?</a></div>
 </form>
 
-</div>
-</div>
-
-  </div>
- </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
 
 
@@ -110,8 +110,8 @@ var wunderUrl = 'http://banners.wunderground.com/banner/ban/wxBanner?bannertype=
   <ul class="SubMenu">
     <li><a href="/restaurants">Restaurant Home</a></li>
     <li><a href="/restaurants/search">Restaurant Guide</a></li>
-    <li><a href="http://blogs.sfweekly.com/foodie/">SFoodie</a></li>
     <li><a href="/restaurants/reviews">Restaurant Reviews</a></li>
+    <li><a href="http://blogs.sfweekly.com/foodie/">SFoodie</a></li>
     <li><a href="/restaurants/menus">Sponsored Online Menus</a></li>
     <li><a href="/restaurants/happyhour">Happy Hour</a></li>
     <li><a href="http://sfweekly.com/adIndex/category/restaurants-71">Restaurant Ads</a></li>
@@ -127,6 +127,7 @@ var wunderUrl = 'http://banners.wunderground.com/banner/ban/wxBanner?bannertype=
   <ul class="SubMenu">
     <li><a href="/calendar">Calendar Home</a></li>
     <li><a href="/events/search">Top Picks</a></li>
+    <li><a href="http://www.sfweekly.com/events/search/?category=1532342">Halloween Events</a></li>
     <li><a href="/feedback/SubmitAnEvent">Submit an Event</a></li>
     <li><a href="http://sfweekly.com/adIndex/category/entertainment-73">Entertainment Ads</a></li>
   </ul>
@@ -201,7 +202,7 @@ buildListMenu("NavigationMenu","Menu","alwaysvisible=true;orientation='horizonta
    </div>
 
     <div class="PencilAd">
-    <a href="http://www.sfweekly.com/about/index"><img src="http://media.sfweekly.com/3480337.0.jpg"></a>    </div>
+        </div>
     <div class="Content">
     <div class="PrivacyContentArea"><!-- p/af/v/about/privacy_policy -->
 <div class="PrivacyPolicy">
@@ -265,18 +266,18 @@ buildListMenu("NavigationMenu","Menu","alwaysvisible=true;orientation='horizonta
 <!-- !p/af/v/about/privacy_policy -->
 
 
-<!-- level: 2 	reference: PrivacyPolicy:0.0358 -->
+<!-- level: 2 	reference: PrivacyPolicy:0.0640 -->
 
 
 
-<!-- end of walkit level: 2 	elapsed: :0.0359 -->
+<!-- end of walkit level: 2 	elapsed: :0.0640 -->
 
 </div>
 <div class="rightrailcontainer">
 <!--googleoff: all-->
 
 
-<!-- level: 3 	reference: GoogleSearchTag:0.0015 -->
+<!-- level: 3 	reference: GoogleSearchTag:0.0000 -->
 
 <div class="SearchMini">   <form action="/search/">
    <input type="text" name="keywords" id="keywords">             
@@ -285,26 +286,25 @@ buildListMenu("NavigationMenu","Menu","alwaysvisible=true;orientation='horizonta
             <a href="/search/archive_search/">Advanced Archive Search&nbsp;&gt;&gt;</a>
 
 
-<!-- level: 4 	reference: SearchMini:0.0446 -->
+<!-- level: 4 	reference: SearchMini:0.0923 -->
 
 
 
-<!-- end of walkit level: 4 	elapsed: :0.0447 -->
+<!-- end of walkit level: 4 	elapsed: :0.0924 -->
 
 </div>
 <div class="RightRail"><!-- p/af/v/ad_index/tower -->
+<!-- js: p/af/wr/js/ad_index_tower.js -->
 <div id="AdIndexTower">
-
+    <form style="display: none;">
+        <input type="hidden" name="section" value="Music">
+        <input type="hidden" name="limit" value="4">
+    </form>
 </div>
-
-<script type="text/javascript" language="javascript">
-    var AdIndex = new AdIndex();
-    AdIndex.tower('Music', '4');
-</script>
 <!-- !p/af/v/ad_index/tower -->
 
 
-<!-- level: 4 	reference: AdIndexTower:0.0016 -->
+<!-- level: 4 	reference: AdIndexTower:0.0035 -->
 
 <!-- NOGSA -->
 <div class="Ads" id="Right">
@@ -316,15 +316,15 @@ buildListMenu("NavigationMenu","Menu","alwaysvisible=true;orientation='horizonta
 </div>
 <!-- /NOGSA -->
 
-<!-- level: 4 	reference: Ads:0.0012 -->
+<!-- level: 4 	reference: Ads:0.0019 -->
 
 <!-- p/af/v/ads/flat_ads -->
 <div class="FlatAds SANbuttons rail">
-    <a href="http://www.sfweekly.com/microsites/txtalerts/"><img src="http://media.sfweekly.com/3149991.0.jpg"></a></div>
+    <div style="margin-bottom:10px;"><a href="http://www.sfweekly.com/readers/register/"><img src="http://media.sfweekly.com/3149991.0.jpg"></a></div></div>
 <!-- !p/af/v/ads/flat_ads -->
 
 
-<!-- level: 4 	reference: FlatAds:0.0010 -->
+<!-- level: 4 	reference: FlatAds:0.0019 -->
 
 <!-- p/af/v/ads/flat_ads -->
 <div class="FlatAds foamorder home">
@@ -345,17 +345,21 @@ buildListMenu("NavigationMenu","Menu","alwaysvisible=true;orientation='horizonta
 <!-- !p/af/v/ads/flat_ads -->
 
 
-<!-- level: 4 	reference: FlatAds:0.0012 -->
+<!-- level: 4 	reference: FlatAds:0.0007 -->
 
 <!-- p/af/v/ads/now_click_this -->
 <div class="HouseBanner">
     <h2>Now Click This</h2>
     <ul>
-    <li><a href="http://www.sfweekly.com/microsites/txtalerts/" target="">San Francisco Text Alerts</a>
+    <li><a href="http://www.myspace.com/sfwstreetteam" target="">SF Weekly Street Team "Band Pick of the Week" on MySpace</a>
+        </li>
+    <li><a href="http://twitter.com/SFWeeklyStreet" target="">Follow the SF Weekly Street Team on Twitter</a>
+        </li>
+    <li><a href="http://www.sfweekly.com/readers/register/" target="">San Francisco Text Alerts</a>
         </li>
     <li><a href="http://www.sfweekly.com/microsites/alternativehealing" target="">SF Weekly Alternative Healing Directory</a>
         </li>
-    <li><a href="http://www.facebook.com/home.php#/pages/SF-Weekly/21992019442" target="">Facebook</a>
+    <li><a href="http://www.facebook.com/home.php#/pages/SF-Weekly/21992019442" target="">Become a friend and a fan of SF Weekly on Facebook</a>
         </li>
     <li><a href="http://www.sfweekly.com/microsites/job-fair" target="_top">Virtual Career Fair</a>
         </li>
@@ -366,32 +370,32 @@ buildListMenu("NavigationMenu","Menu","alwaysvisible=true;orientation='horizonta
 <!-- !p/af/v/ads/now_click_this -->
 
 
-<!-- level: 4 	reference: NowClickThis:0.0013 -->
+<!-- level: 4 	reference: NowClickThis:0.0053 -->
 
 <!-- p/af/v/ads/backpage_categories -->
 <div class="BackpageCategories">
     <a href="/classifieds"><img src="http://assets.sfweekly.com/img/backpage_09.jpg" alt="Backpage.com"></a>
     <div class="bpFoot">Free Classifieds San Francisco, CA</div>
     <ul>
-    <li><a href="http://sfweekly.backpage.com/buyselltrade/classifieds/Results?section=4378">buy, sell, trade (2,033)</a></li>
-<li><a href="http://sfweekly.backpage.com/musician/classifieds/Results?section=4380">musician (528)</a></li>
-<li><a href="http://sfweekly.backpage.com/rentals/classifieds/Results?section=4376">rentals (1,756)</a></li>
-<li><a href="http://sfweekly.backpage.com/employment/classifieds/Results?section=4373">jobs (1,088)</a></li>
-<li><a href="http://sfweekly.backpage.com/adult/classifieds/Disclaimer?section=4381">adult entertainment (4,914)</a></li>
+    <li><a href="http://sfweekly.backpage.com/buyselltrade/classifieds/Results?section=4378">buy, sell, trade (3,097)</a></li>
+<li><a href="http://sfweekly.backpage.com/musician/classifieds/Results?section=4380">musician (489)</a></li>
+<li><a href="http://sfweekly.backpage.com/rentals/classifieds/Results?section=4376">rentals (5,149)</a></li>
+<li><a href="http://sfweekly.backpage.com/employment/classifieds/Results?section=4373">jobs (2,280)</a></li>
+<li><a href="http://sfweekly.backpage.com/adult/classifieds/Disclaimer?section=4381">adult entertainment (4,351)</a></li>
     </ul>
 </div>
 <!-- !p/af/v/ads/backpage_categories -->
 
 
-<!-- level: 4 	reference: BackpageCategories:0.0010 -->
+<!-- level: 4 	reference: BackpageCategories:0.0019 -->
 
 
 
-<!-- level: 4 	reference: AdsPersonals:0.0002 -->
+<!-- level: 4 	reference: AdsPersonals:0.0003 -->
 
 
 
-<!-- level: 4 	reference: BackpageClassifieds:0.0004 -->
+<!-- level: 4 	reference: BackpageClassifieds:0.0005 -->
 
 
 
@@ -402,24 +406,24 @@ buildListMenu("NavigationMenu","Menu","alwaysvisible=true;orientation='horizonta
 <!--googleon: all-->
 
 
-<!-- level: 3 	reference: GoogleSearchTag:0.0009 -->
+<!-- level: 3 	reference: GoogleSearchTag:0.0013 -->
 
 
 
-<!-- end of walkit level: 3 	elapsed: :0.0010 -->
+<!-- end of walkit level: 3 	elapsed: :0.0013 -->
 
 
 
-<!-- level: 2 	reference: right_rail:0.0606 -->
+<!-- level: 2 	reference: right_rail:0.1144 -->
 
 
 
-<!-- end of walkit level: 2 	elapsed: :0.0606 -->
+<!-- end of walkit level: 2 	elapsed: :0.1144 -->
 
 </div>
 
 
-<!-- end of walkit level: 1 	elapsed: :0.0608 -->
+<!-- end of walkit level: 1 	elapsed: :0.1145 -->
 
      <div class="BottomBanner">
 <!-- banner ad widget here -->
@@ -443,8 +447,9 @@ buildListMenu("NavigationMenu","Menu","alwaysvisible=true;orientation='horizonta
     <a href="http://sf.backpage.com">Free Classifieds</a> |
     <a href="http://www.ruxton.com">National Advertising</a> |
     <a href="/about/privacyPolicy">Privacy Policy</a> |
+    <a href="/about/terms">Terms of Use</a> |
     <a href="/bugs">Problem&nbsp;With&nbsp;the&nbsp;Site?</a> |
-    <a href="/syndication/issue" rel="nofollow">RSS</a> |
+    <a href="/about/syndication">RSS</a> |
     <a href="/about/siteMap">Site Map</a>
     <br>
      © 2009 Village Voice Media All rights reserved.
@@ -467,6 +472,7 @@ buildListMenu("NavigationMenu","Menu","alwaysvisible=true;orientation='horizonta
 _udn = "sfweekly.com";
 _uacct = "UA-395255-5";
 urchinTracker();
+__utmSetVar("Home|Misc|");
 </script>
 
   
