--- a/a/al/als/alsearsmd.com.html
+++ b/a/al/als/alsearsmd.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the alsearsmd.com privacy policy that was archived on 2009-06-18.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090618142313id_/http%3A//www.alsearsmd.com/content/index.php%3Fid%3D122) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the alsearsmd.com privacy policy that was archived on 2009-10-20.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20091020153635id_/http%3A//www.alsearsmd.com/content/index.php%3Fid%3D122) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN"><html><head>
 	<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
@@ -203,115 +203,256 @@
 
 
 
+
+
+
 <div id="container"> 
+
+
+
+
 
 
 
   <!-- ------------------------------------------------Header BEGIN -->
 
+
+
 <table border="0" cellspacing="0" cellpadding="0" align="center" width="100%" class="top" bgcolor="#ffffff">
+
 <tbody><tr>
+
 <td bgcolor="#4262B6" align="center" height="105" valign="bottom" style="background: url(/img/bg-top.gif) repeat-x">
+
 <table border="0" cellspacing="0" cellpadding="0" align="center">
+
 <tbody><tr>
+
 <td><a href="/"><img src="/img/doctorsears-2.jpg" width="107" height="105" alt="Dr. Al Sears" border="0"></a></td>
+
 <td align="center" height="100%" style="padding-bottom:8px;"><img src="/img/title.gif" alt="Power for Healthy Living" border="0"></td>
+
 </tr>
+
 </tbody></table>
+
+
 
 <!-- top navigation -->
+
 <table width="100%" border="0" cellspacing="0" cellpadding="0" align="center" style="background:url(/img/b-bg.gif); border-top:1px solid #003471; border-bottom:1px solid #003471;">
+
 <tbody><tr>
+
 <td align="center">
-<a href="/"><img src="fileadmin/templates/img/b-home.gif" width="55" height="20" alt="Home" border="0"></a><a href="/past-issues.html"><img src="fileadmin/templates/img/b-past-issues.gif" width="86" height="20" alt="Past Issues" border="0"></a><a href="/catalog/"><img src="fileadmin/templates/img/b-catalog.gif" width="66" height="20" alt="Catalog" border="0"></a><a href="/content/index.php?id=639"><img src="fileadmin/templates/img/b-wellness-center.gif" width="179" height="20" alt="Health and Wellness Center" border="0"></a><a href="/health-directory/"><img src="fileadmin/templates/img/b-health-directory.gif" width="113" height="20" alt="Health Directory" border="0"></a><a href="/health-resources.html"><img src="fileadmin/templates/img/b-resources.gif" width="122" height="20" alt="Health Resources" border="0"></a><a href="http://www.pacepower.net/" target="_blank"><img src="fileadmin/templates/img/nav/pace-power.gif" width="92" height="20" alt="PACE® Power" border="0"></a><a href="/content/index.php?id=113"><img src="fileadmin/templates/img/b-contact.gif" width="84" height="20" alt="Contact Us" border="0"></a></td>
+
+<a href="/"><img src="/img/b-home.gif" width="55" height="20" alt="Home" border="0"></a><a href="/past-issues.html"><img src="/img/b-past-issues.gif" width="86" height="20" alt="Past Issues" border="0"></a><a href="/catalog/"><img src="/img/b-catalog.gif" width="66" height="20" alt="Catalog" border="0"></a><a href="/content/index.php?id=639"><img src="/img/b-wellness-center.gif" width="179" height="20" alt="Health and Wellness Center" border="0"></a><a href="/health-directory/"><img src="/img/b-health-directory.gif" width="113" height="20" alt="Health Directory" border="0"></a><a href="/health-resources.html"><img src="/img/b-resources.gif" width="122" height="20" alt="Health Resources" border="0"></a><a href="http://www.pacepower.net/" target="_blank"><img src="/img/nav/pace-power.gif" width="92" height="20" alt="PACE® Power" border="0"></a><a href="/contact.html"><img src="/img/b-contact.gif" width="84" height="20" alt="Contact Us" border="0"></a></td>
+
 </tr>
+
 </tbody></table>
+
 <!-- Header STOP -->
 
+
+
 <table border="0" cellspacing="0" cellpadding="0" align="center" width="100%">
+
 <tbody><tr>
+
 <td bgcolor="#4262B6" valign="top" align="center" width="150" class="lftColumn">
+
+
 
 <!-- Begin Left Column -->
 
 
+
+
+
 <div id="leftContent"><br>
+
 <a href="http://www.telomeraseactivation.org/" target="_blank"><img src="/img/telomerase-bge.gif" alt="" width="140" height="97" border="0"></a>
+
 <br><br>
+
 <div align="center"><span style="font-size: 16px;"><strong>TA65<br>in the News:</strong></span></div>
+
 <br>
+
 <strong><font size="2">NEWSWEEK:<br>
+
 HEALTH FOR LIFE</font></strong><font size="2"><br><br>
+
 <div style="text-align: left; padding-left: 6px;"><font size="2">Never Say Die<br>
+
 Step aside, quacks. The search for longer 
+
 life is a real science now.<br><br>
+
 By Anne Underwood</font></div><font size="2">
+
 <br>
+
 <a href="http://www.newsweek.com/id/172561" target="_blank">
+
 Click Here</a></font><a href="http://www.newsweek.com/id/172561" target="_blank">
+
 </a>
+
 <br>
+
+
+
+
 
 
 
 <p><a href="http://www.primalforce.net" target="_blank"><img src="/img/btn-primal-force2.gif" alt="Learn More about Primal Force supplements" title="Learn More about Primal Force supplements" width="140" height="86" border="0"></a>
+
 <br><br>
+
 <a href="http://www.wellnessresearch.org" target="_blank"><img src="/img/btn-wellness-research2.gif" alt="Learn More about our Wellness Research Foundation" title="Learn More about our Wellness Research Foundation" width="140" height="86" border="0"></a>
+
 <br><br>
+
 <a href="http://www.pacepower.net" target="_blank"><img src="/img/pacepower-btn.jpg" width="140" height="86" border="0" alt="Learn more about Pace Power"></a>
+
 <br><br>
+
 <a href="/partnerprogram/" target="_blank"><img src="/img/affbut-1.gif" alt="Join Dr. Sears' Partner Program" width="140" height="120" border="0"></a>
+
 </p>
 
+
+
 <p style="font-size: 14px;color:#e7ffff; margin-top:5px;"><strong>Learn More about<br>Dr. Sears' Books</strong></p>
+
 <a href="http://www.on2url.com/app/adtrack.asp?MerchantID=89261&amp;AdID=435116 " target="_blank"><img src="/img/7-steps-book1.jpg" alt="" width="100" height="180" border="0"></a>
+
 <br><br>
+
 <a href="/sunbook/"><img src="fileadmin/templates/img/sun-book-120w.jpg" alt="Your Best Health Under the Sun" width="120" height="158" border="0"></a>
+
 <br><br>
+
 <a href="/pace/"><img src="fileadmin/templates/img/pace.jpg" alt="PACE - Native Fitness" width="120" height="164" border="0"></a>
+
 <br><br>
+
 <a href="/12ways/"><img src="fileadmin/templates/img/12-secrets.gif" width="120" height="183" alt="12 Secrets to Virility" border="0"></a>
+
 <br><br>
+
 <a href="/content/index.php?id=116"><img src="fileadmin/templates/img/tdhc.gif" width="120" height="183" alt="The Doctor's Heart Cure" border="0"></a>
+
 <br><br>
+
 <img src="fileadmin/templates/img/spacer.gif" width="150" height="3" alt="" border="0">
+
+
 
     </font></div><font size="2">
 
+
+
 <!-- End Left Column -->
 
+
+
 </font></td>
+
 <td valign="top" bgcolor="#ffffff" width="100%" class="centerColumn">
+
 <table width="100%" border="0" cellspacing="0" cellpadding="0" style="border-bottom:1px solid #003471; background:#E4E9F5;" align="center">
+
 <tbody><tr>
+
 <td style="padding:2px; padding-left:10px; font-size:12px;">
 
-<form name="oemProSubscription" method="post" action="http://www.alsearsmd.net/oempro/subscribe.php">
-<input type="hidden" name="FormValue_MailListIDs[]" value="2">
-<input type="hidden" name="FormValue_CustomField2" value="HomePage2009">
-<input type="hidden" name="FormValue_SuccessScreenID" value="MTg%3D">
-<input type="hidden" name="FormValue_FailureScreenID" value="Mg%3D%3D">
-<input type="hidden" name="FormValue_CustomFieldIDs" value="Miwx">
-<table border="0" cellspacing="0" cellpadding="2" align="center">
+<table border="0" cellspacing="0" cellpadding="2" align="center" width="400">
 <tbody><tr><td colspan="4"><div align="center"><div style="padding-right: 6px;"><strong>Sign up TODAY!</strong>
 <br>
 Simply sign up to receive Dr. Al Sears' FREE Health e-letter (5 x per week) and we'll immediately send you his most recent research report, <strong><em>Seven Steps to a More Youthful Life...</em></strong> absolutely FREE:</div></div></td></tr>
 <tr>
-<td align="right" nowrap="" style="FONT-SIZE: 12px; COLOR: #333333; LINE-HEIGHT: 17px; FONT-FAMILY: Verdana, Arial, Helvetica, sans-serif;">First Name:</td>
-<td><input type="text" name="FormValue_CustomField1" value="" size="14" maxlength="50"></td>
-<td align="right" style="FONT-SIZE: 12px; COLOR: #333333; LINE-HEIGHT: 17px; FONT-FAMILY: Verdana, Arial, Helvetica, sans-serif; padding-left:20px;">Email:</td>
-<td><input type="text" name="FormValue_Email" value="" size="14" maxlength="50"></td>
-</tr>
+<td>
+<!-- saved from url=(0022)http://internet.e-mail -->
 
-<tr>
-<td align="center" colspan="4"><input type="submit" name="Submit" value="Start Today!"></td>
+<form method="post" action="http://www.alsearsmd.net/interspire/form.php?form=3" id="frmSS3" onsubmit="return CheckForm3(this);">
+	<table border="0" cellpadding="2" class="myForm">
+		<tbody><tr>
+	<td><span class="required">*</span>&nbsp;
+Your Email Address:</td>
+	<td><input type="text" name="email" value="" size="30"></td>
+</tr><tr>
+	<td><span class="required">*</span>&nbsp;
+First Name:</td>
+	<td><input type="text" name="CustomFields[2]" id="CustomFields_2_3" value="" size="30"></td>
+</tr>
+		<tr>
+			<td></td>
+			<td>
+				<input type="submit" value="Start Today">
+				<input type="hidden" name="CustomFields[38]" id="CustomFields_38_3" value="homepage2009" size="30" maxlength="30">
+                <input type="hidden" name="format" value="h"></td>
+		</tr>
+	</tbody></table>
+</form>
+
+<script type="text/javascript">
+// <![CDATA[
+
+			function CheckMultiple3(frm, name) {
+				for (var i=0; i < frm.length; i++)
+				{
+					fldObj = frm.elements[i];
+					fldId = fldObj.id;
+					if (fldId) {
+						var fieldnamecheck=fldObj.id.indexOf(name);
+						if (fieldnamecheck != -1) {
+							if (fldObj.checked) {
+								return true;
+							}
+						}
+					}
+				}
+				return false;
+			}
+		function CheckForm3(f) {
+			var email_re = /[a-z0-9!#$%&'*+\/=?^_`{|}~-]+(?:\.[a-z0-9!#$%&'*+\/=?^_`{|}~-]+)*@(?:[a-z0-9](?:[a-z0-9-]*[a-z0-9])?\.)+[a-z0-9](?:[a-z0-9-]*[a-z0-9])?/i;
+			if (!email_re.test(f.email.value)) {
+				alert("Please enter your email address.");
+				f.email.focus();
+				return false;
+			}
+		
+			var fname = "CustomFields_2_3";
+			var fld = document.getElementById(fname);
+			if (fld.value == "") {
+				alert("Please enter a value for field First Name");
+				fld.focus();
+				return false;
+			}
+		
+				return true;
+			}
+		
+// ]]>
+</script>
+</td>
 </tr>
 </tbody></table>
-</form></td>
+
+</td>
+
 <td style="padding-left: 20px; padding-right: 20px;"><a href="http://www.alsearsmd.com/content/index.php?id=121&amp;no_cache=1&amp;sword_list[]=glycemic&amp;sword_list[]=index"><img src="/img/glycemic-btn.gif" alt="Get Your Glycemic Index" width="125" height="70" border="0"></a></td>
+
 </tr></tbody></table>
+
   <!-- ------------------------------------------------Content BEGIN -->
+
  
+
 <div id="centerColumn" style="padding-left:10px;padding-right:20px; margin:0;">
 	<!--  CONTENT ELEMENT, uid:81/text [begin] -->
 		<a name="81"></a>
@@ -349,7 +490,11 @@ Simply sign up to receive Dr. Al Sears' FREE Health e-letter (5 x per week) and 
 	<!--  CONTENT ELEMENT, uid:81/text [end] -->
 		</div>
 
+
+
   <!-- ------------------------------------------------Content STOP -->
+
+
 
 <!-- End Main Content -->
 
@@ -358,66 +503,135 @@ Simply sign up to receive Dr. Al Sears' FREE Health e-letter (5 x per week) and 
 
 
 
+
+
+
+
+
+
+
 </td>
+
 </tr>
+
 </tbody></table>
+
 </td>
+
 </tr>
+
 </tbody></table>
+
+
+
+
 
 
 
 <table border="0" cellspacing="0" cellpadding="0" align="center" width="100%">
+
 <tbody><tr>
+
 <td bgcolor="#4262B6" valign="top" align="center" width="140"><img src="fileadmin/templates/img/spacer.gif" width="150" height="3" alt="" border="0"></td>
+
 <td valign="top" bgcolor="#ffffff" width="100%" align="center">
 
+
+
 <table border="0" cellspacing="4" cellpadding="0" align="center" width="100%" bgcolor="#DCE5FB">
+
 <tbody><tr>
+
 <td><font size="1">Al Sears, MD<br>11903 Southern Blvd.<br>Royal Palm Beach, FL 33411<br>Phone: Toll Free 866.792.1035</font></td>
+
 <td align="right" width="100"><a href="/content/index.php?id=123"><font size="1">Disclaimer</font></a></td>
+
 <td width="10">::</td>
+
 <td width="120"><a href="/content/index.php?id=122"><font size="1">Privacy Policy</font></a></td>
+
 </tr>
+
 </tbody></table>
 
+
+
 <table bgcolor="#ffffff" border="0" cellspacing="0" cellpadding="4" align="center">
+
 <tbody><tr>
+
 <td class="bottom">©2005-2009 Al Sears, MD. All rights reserved. Website designed by <a href="http://www.webdex.com/" target="_blank" class="bottom">Webdex</a></td>
+
 </tr>
+
 </tbody></table>
+
 </td>
+
 </tr>
+
 </tbody></table>
+
 </div>
+
 <script type="text/javascript">
+
 var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www."); document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
+
 </script><script src="https://ssl.google-analytics.com/ga.js" type="text/javascript"></script>
+
 <script type="text/javascript">
+
 try {
+
 var pageTracker = _gat._getTracker("UA-947566-1"); pageTracker._trackPageview(); } catch(err) {}</script>
+
+
 
 <!-- Start Quantcast tag -->
 
+
+
 <script type="text/javascript">
+
+
 
 _qoptions={
 
+
+
 qacct:"p-57CzVOLmFF0Ew"
+
+
 
 };
 
+
+
 </script>
+
+
 
 <script type="text/javascript" src="http://edge.quantserve.com/quant.js"></script>
 
+
+
 <noscript>
+
+
 
 <img src="http://pixel.quantserve.com/pixel/p-57CzVOLmFF0Ew.gif" style="display: none;" border="0" height="1" width="1" alt="Quantcast" />
 
+
+
 </noscript>
 
+
+
 <!-- End Quantcast tag -->
+
+
+
 
 
 
