--- a/f/fo/foc/focus-economics.com.html
+++ b/f/fo/foc/focus-economics.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the focus-economics.com privacy policy that was archived on 2009-06-17.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090617142523id_/http%3A//focus-economics.com/en_UK/est/privacy.php) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the focus-economics.com privacy policy that was archived on 2009-10-21.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20091021185330id_/http%3A//www.focus-economics.com/en_UK/est/privacy.php) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head>
 <meta name="keywords" content="Economic Forecast, Consensus Forecast, Economic Growth, Gross Domestic Product, GDP, Inflation, Consumer Prices, CPI, Exchange Rate, Interest Rate, Asia, Latin America, Eastern Europe, Brazil, Russia, India, China, Korea, BRIC, Asean, NIE">
