--- a/r/ra/rai/rainbownation.com.html
+++ b/r/ra/rai/rainbownation.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the rainbownation.com privacy policy that was archived on 2009-04-20.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090420043824id_/http%3A//www.rainbownation.com/about/privacy.asp) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the rainbownation.com privacy policy that was archived on 2009-10-21.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20091021210946id_/http%3A//www.rainbownation.com/about/privacy.asp) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd"><html><head>
 <meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
@@ -28,9 +28,9 @@ urchinTracker();
 			<td width="180" valign="top" class="TextWhite">
 			<a href="../index.asp" title="South Africa Connected">
 			<img border="0" src="../images/bg/logo.gif" width="180" height="50" alt="South Africa Connected"></a><br>
-			Monday, 20th April 2009</td>
-			<td align="center"><a href="../ad/ad.asp?id=17&amp;way=ban" target="_parent"><img src="http://za.offerforge.com/42/196/333&amp;dp=55595" alt="NetFlorist - South Africa Florist" border="0" width="468" height="60"></a>&nbsp;
-			<a href="../ad/ad.asp?id=30&amp;way=ban" target="_parent"><img src="http://za.offerforge.com/42/196/337&amp;dp=206039" alt="Send flowers in South Africa " border="0" width="120" height="60"></a></td>
+			Wednesday, 21st October 2009</td>
+			<td align="center"><a href="../ad/ad.asp?id=108&amp;way=ban" target="_parent"><img src="http://za.offerforge.com/42/196/334/" alt="South Africa Flowers delivery" border="0" width="468" height="60"></a>&nbsp;
+			</td>
 		</tr>
 	</tbody></table>
 </div>
@@ -74,19 +74,12 @@ urchinTracker();
 <a href="../advertising/index.asp" title="Advertise on Rainbow Nation">Advertising</a>
 </div><br><div align="center"><script type="text/javascript"><!--
 google_ad_client = "pub-5736355482830404";
-google_alternate_color = "FFFFFF";
+/* 120x600 vert */
+google_ad_slot = "5489519853";
 google_ad_width = 120;
 google_ad_height = 600;
-google_ad_format = "120x600_as";
-google_ad_type = "image";
-//2007-01-11: Global
-google_ad_channel = "4449916194";
-google_color_border = "3399FF";
-google_color_bg = "FFFFFF";
-google_color_link = "0000FF";
-google_color_text = "000000";
-google_color_url = "660000";
-//--></script>
+//-->
+</script>
 <script type="text/javascript" src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
 </script></div>
 </div><div id="rbn-mid">
@@ -329,7 +322,7 @@ google_color_url = "660000";
 	Site Map</a><br>
 	<div class="copy">
 		&nbsp;© RainbowNation.com 1998-2009.  All rights reserved.
-	</div>
+	&nbsp;[US]</div>
 </div> 
 
 
