--- a/g/go/gop/gopetplan.com.html
+++ b/g/go/gop/gopetplan.com.html
@@ -1,13 +1,14 @@
-<!--The following is the downloaded HTML source of the gopetplan.com privacy policy that was archived on 2009-06-21.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090621081413id_/http%3A//www.gopetplan.com/Privacy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the gopetplan.com privacy policy that was archived on 2009-10-22.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20091022035242id_/http%3A//www.gopetplan.com/Privacy.html) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd"><html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en"><head>
 
   <title>Petplan USA Privacy Policies</title>
 
   <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
-  <meta name="description" content="Find out how Petplan USA safeguards the security and privacy of your information">
-  <meta name="keywords" content="pet insurance, pet health insurance, dog insurance, cat insurance, veterinary insurance, pet insurance privacy, Petplan USA security">
+  <meta name="description" content="Find out how Petplan USA safeguards the security and privacy of your information in our online privacy policy">
+  <meta name="keywords" content="Petplan, Privacy policy, personal information, Security, Confidentiality, opting out, Website Security.">
+  <meta name="title" content="Privacy and Security Policy for Petplan USA website users">
 
 <script type="text/javascript">
 var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
